src/parser/Analizador.java
/* Generated By:JavaCC: Do not edit this line. Analizador.java */
package  parser;

import simbolos.TablaDeSimbolos;
import simbolos.Variable;
import tiposDeDatos.TiposDeDatos;
import tiposDeDatos.Valor;

import java.io.FileInputStream;
import java.io.FileNotFoundException;

class Analizador implements AnalizadorConstants {

    public static TablaDeSimbolos tablaDeSimbolos;

        public static void main(String[] args) throws ParseException, FileNotFoundException
        {

            tablaDeSimbolos = new TablaDeSimbolos();

                try
                {
                        Analizador analizador=new Analizador(new FileInputStream("src/parser/prueba.txt"));
                        analizador.programa();
                }
                catch(ParseException e)
                {
                        System.out.println(e.getMessage());
                }
        }

  static final public void programa() throws ParseException {
    try {
      jj_consume_token(MODIFICADOR);
      jj_consume_token(CLASE);
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(CORCHETE_IZQ);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MODIFICADOR:
        case SI:
        case MIENTTRAS:
        case IDENTIFICADOR:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        expresion();
      }
      jj_consume_token(CORCHETE_DER);
                 System.out.println(tablaDeSimbolos);
    } catch (ParseException e) {
                System.out.println(e.toString());
    }
  }

// INICIA DECLARACION DE VARIABLES -
  static final public void declaracion_de_variable() throws ParseException {
    Token token = null;
    Token tokenTipoDatos = null;
    Variable variable = null;
    jj_consume_token(MODIFICADOR);
    tokenTipoDatos = jj_consume_token(TIPO);
    token = jj_consume_token(IDENTIFICADOR);
        variable = new Variable(token,tokenTipoDatos);
            tablaDeSimbolos.agregarIdentificador(variable);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASIGNACION:
      asignacion(variable);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
  }

//TERMINA DECLARACION DE VARIABLES

//INICIA ASIGNACION DE VARIABLES
  static final public void asignacion(Variable variable) throws ParseException {
    Valor valor;
    jj_consume_token(ASIGNACION);
    valor = expresion_matematica();
     variable.setValor(valor);
  }

  static final public void expresion_asignacion() throws ParseException {
    Variable variable;
    variable = variable();
    asignacion(variable);
  }

//TERMINA ASIGNACION DE VARIABLES
  static final public Variable variable() throws ParseException {
    Token tokenIdentificador;
    tokenIdentificador = jj_consume_token(IDENTIFICADOR);
      Variable variable = (Variable) tablaDeSimbolos.obtenerIdentificador(tokenIdentificador);
      variable.setAparicionMasReciente(tokenIdentificador);
      {if (true) return variable;}
    throw new Error("Missing return statement in function");
  }

  static final public Valor valor() throws ParseException {
    Valor valor;
    Variable variable;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LITERAL_ENTERA:
    case LITERAL_BOOLEANA:
    case LITERAL_CADENA:
    case LITERAL_DOBLE:
      valor = literal();
      break;
    case IDENTIFICADOR:
      variable = variable();
         valor = variable.getValor();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return valor;}
    throw new Error("Missing return statement in function");
  }

  static final public Valor literal() throws ParseException {
    Token literalToken;
    Valor valorDeLiteral;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LITERAL_ENTERA:
      literalToken = jj_consume_token(LITERAL_ENTERA);
         valorDeLiteral = new Valor(literalToken.image, TiposDeDatos.getTipoDeDato("INT"));
      break;
    case LITERAL_BOOLEANA:
      literalToken = jj_consume_token(LITERAL_BOOLEANA);
         valorDeLiteral = new Valor(literalToken.image,TiposDeDatos.getTipoDeDato("BOOLEAN"));
      break;
    case LITERAL_CADENA:
      literalToken = jj_consume_token(LITERAL_CADENA);
         valorDeLiteral = new Valor(literalToken.image,TiposDeDatos.getTipoDeDato("STRING"));
      break;
    case LITERAL_DOBLE:
      literalToken = jj_consume_token(LITERAL_DOBLE);
         valorDeLiteral = new Valor(literalToken.image,TiposDeDatos.getTipoDeDato("DOUBLE"));
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return valorDeLiteral;}
    throw new Error("Missing return statement in function");
  }

//INICIA OPERACIOONES MATEMATICAS
  static final public Valor expresion_matematica() throws ParseException {
    Valor resultado;
    if (jj_2_1(2)) {
      resultado = operacion_matematica();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LITERAL_ENTERA:
      case LITERAL_BOOLEANA:
      case LITERAL_CADENA:
      case LITERAL_DOBLE:
      case IDENTIFICADOR:
        resultado = valor();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return resultado;}
    throw new Error("Missing return statement in function");
  }

  static final public Valor operacion_matematica() throws ParseException {
    Valor operando1;
    Valor resultado = null;
    operando1 = valor();
    resultado = operaciones(operando1);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAS:
      case MENOS:
      case POR:
      case ENTRE:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      resultado = operaciones(resultado);
    }
    System.out.println("operacion");
    {if (true) return resultado;}
    throw new Error("Missing return statement in function");
  }

  static final public Valor operaciones(Valor operando1) throws ParseException {
    Valor resultado;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAS:
      resultado = suma(operando1);
      break;
    case MENOS:
      resultado = resta(operando1);
      break;
    case POR:
      resultado = multiplicacion(operando1);
      break;
    case ENTRE:
      resultado = division(operando1);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return resultado;}
    throw new Error("Missing return statement in function");
  }

  static final public Valor suma(Valor operando1) throws ParseException {
    Valor operando2;
    Token tokenOperador;
    tokenOperador = jj_consume_token(MAS);
    operando2 = valor();
     {if (true) return operando1.suma(operando2,tokenOperador);}
    throw new Error("Missing return statement in function");
  }

  static final public Valor resta(Valor operando1) throws ParseException {
    Valor operando2;
    Token tokenOperador;
    tokenOperador = jj_consume_token(MENOS);
    operando2 = valor();
     {if (true) return operando1.resta(operando2,tokenOperador);}
    throw new Error("Missing return statement in function");
  }

  static final public Valor division(Valor operando1) throws ParseException {
    Valor operando2;
    Token tokenOperador;
    tokenOperador = jj_consume_token(ENTRE);
    operando2 = valor();
     {if (true) return operando1.division(operando2,tokenOperador);}
    throw new Error("Missing return statement in function");
  }

  static final public Valor multiplicacion(Valor operando1) throws ParseException {
    Valor operando2;
    Token tokenOperador;
    tokenOperador = jj_consume_token(POR);
    operando2 = valor();
     {if (true) return operando1.multiplicacion(operando2,tokenOperador);}
    throw new Error("Missing return statement in function");
  }

//TERMINA OPERACIONES MATEMATICAS
  static final public void expresion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MODIFICADOR:
    case IDENTIFICADOR:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFICADOR:
        expresion_asignacion();
        break;
      case MODIFICADOR:
        declaracion_de_variable();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(PUNTO_Y_COMA);
      break;
    case SI:
    case MIENTTRAS:
      expresiones_bloque();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expresiones_bloque() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SI:
      expresion_si();
      break;
    case MIENTTRAS:
      expresion_mientras();
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expresion_si() throws ParseException {
    jj_consume_token(SI);
    jj_consume_token(PARENTESIS_IZQ);
    expresion_de_comparacion();
    jj_consume_token(PARENTESIS_DER);
    bloque();
  }

  static final public void expresion_mientras() throws ParseException {
    jj_consume_token(MIENTTRAS);
    jj_consume_token(PARENTESIS_IZQ);
    expresion_de_comparacion();
    jj_consume_token(PARENTESIS_DER);
    bloque();
  }

  static final public void bloque() throws ParseException {
    jj_consume_token(CORCHETE_IZQ);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MODIFICADOR:
      case SI:
      case MIENTTRAS:
      case IDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_3;
      }
      expresion();
    }
    jj_consume_token(CORCHETE_DER);
  }

  static final public void expresion_de_comparacion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LITERAL_ENTERA:
      jj_consume_token(LITERAL_ENTERA);
      break;
    case IDENTIFICADOR:
      jj_consume_token(IDENTIFICADOR);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(COMPARADORES);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LITERAL_ENTERA:
      jj_consume_token(LITERAL_ENTERA);
      break;
    case IDENTIFICADOR:
      jj_consume_token(IDENTIFICADOR);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(MAS)) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    if (jj_scan_token(LITERAL_DOBLE)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(LITERAL_CADENA)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_scan_token(LITERAL_BOOLEANA)) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_scan_token(LITERAL_ENTERA)) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_9()) {
    jj_scanpos = xsp;
    if (jj_3R_10()) {
    jj_scanpos = xsp;
    if (jj_3R_11()) {
    jj_scanpos = xsp;
    if (jj_3R_12()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(POR)) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_7() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_4() {
    if (jj_3R_5()) return true;
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(ENTRE)) return true;
    return false;
  }

  static private boolean jj_3R_5() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_7()) {
    jj_scanpos = xsp;
    if (jj_3R_8()) return true;
    }
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(MENOS)) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public AnalizadorTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[13];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x10000620,0x40000,0x1f000000,0xf000000,0x1f000000,0xf00000,0xf00000,0x10000020,0x10000620,0x600,0x10000620,0x11000000,0x11000000,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[1];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public Analizador(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Analizador(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new AnalizadorTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public Analizador(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new AnalizadorTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public Analizador(AnalizadorTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(AnalizadorTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  static final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  static private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;
  static private int[] jj_lasttokens = new int[100];
  static private int jj_endpos;

  static private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      boolean exists = false;
      for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        exists = true;
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              exists = false;
              break;
            }
          }
          if (exists) break;
        }
      }
      if (!exists) jj_expentries.add(jj_expentry);
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[29];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 13; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 29; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

  static private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 1; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
          }
        }
        p = p.next;
      } while (p != null);
      } catch(LookaheadSuccess ls) { }
    }
    jj_rescan = false;
  }

  static private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

  static final class JJCalls {
    int gen;
    Token first;
    int arg;
    JJCalls next;
  }

}
